# AI_Projects

./: .gitignore  AGENTS.md  AGENT_USAGE_GUIDE.md  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  QWEN.md  README.md  git_auto_commit_push.py  test_commit.txt  v_1_evaluator_promptfoo_评测系统_prd.md
open-cli/: AGENTS.md  README.md  cli.py  config.py  graphify-gen.py  graphify-html.py  pyproject.toml  requirements.txt  setup.py
open-cli/core/: llm.py  pager.py  renderer.py  security.py  selector.py  session.py  status.py
open-cli/docs/superpowers/plans/: 2026-04-30-open-cli-implementation.md  2026-04-30-open-cli-ui-implementation.md  2026-04-30-open-cli-v2-implementation.md  2026-05-06-open-cli-tui-implementation.md
open-cli/docs/superpowers/specs/: 2026-04-30-open-cli-design.md  (+3 more)
open-cli/graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json
open-cli/opencli/: __init__.py
open-cli/src/opencli/: __init__.py  cli.py  pyproject.toml  server.py
open-cli/tests/: test_agent_message.py  test_auto_memory.py  test_integration_cli.py  test_memory_integration.py  test_memory_loader.py  test_renderer.py  test_repl.py
open-cli/tests/agent/: test_engine.py  test_engine_skills.py  test_executor.py
open-cli/tests/agents/: __init__.py  test_builder.py  test_config.py  test_explorer.py  test_factory.py  test_integration.py  test_planner.py  test_runner.py  test_types.py
open-cli/tests/client/: test_app.py  test_protocol.py
open-cli/tests/core/: test_llm.py  test_security.py  test_security_new.py  test_session.py
open-cli/tests/extensions/: test_commands.py  test_hooks.py  test_loader_extended.py  test_mcp.py  test_registry_extended.py  test_skills.py  test_skills_cli.py  test_skills_extended.py
open-cli/tests/server/: test_agent_system.py  test_checkpoint.py  test_memory.py  test_plan_agent.py
open-cli/tests/skills/: test_activation.py  test_builtins.py  test_injection.py
open-cli/tests/tools/: test_cmd_tool.py  test_file_tool.py  test_git_tool.py  test_registry.py
open-cli/thoughts/ledgers/: CONTINUITY_ses_1e5f.md
open-cli/tools/: __init__.py  cmd_tool.py  file_tool.py  git_tool.py
(+1456 files in other folders)
